# openalex-collaboration-crawler

./: .gitignore  Cargo.toml  LICENSE  README.md  graph.cpp  papers.cpp
analysis/: .gitignore  01_A_plot_openalex_ontology.py  01_metadata_analysis.py  02_backbones.py  02_graph_structural_statistics.py  03_backbone.py  03_structural_statistics.py  04_bacbone_structural_statistics.py  04_backbone_structural_statistics.py  05_community_extraction.py  06_community_stability.py  07_community_flow.py  07_community_labelling.py  08_community_flow.py  08_generate_plots.py  08_graphs_property_validation.py  08_graphs_propterty_validation.py  09_generate_plots.py  09_graphs_propterty_validation.py  10_community_labelling.py  10_topic_signal_analisys.py  11_community_flow_visualization.py  12_new_author_distribution.py  README.md  compute_structural_statistics.py  default-uk.toml  default.toml  mappings.py  metadata_analysis.ipynb  metadata_analysis.py  requirements.txt  topic_to_category.py
cpp/: CMakeLists.txt  authors.cpp  graph.cpp  papers.cpp
cpp/include/: decompress.h  openalex_json.h  utils.h
cpp/src/: decompress.cpp  openalex_json.cpp  ui.cpp  utils.cpp
extra/: inspect-data.py
generation/: CMakeLists.txt
generation/include/: decompress.h  openalex_json.h
generation/src/: authors.cpp  decompress.cpp  graph.cpp  openalex_json.cpp  papers.cpp  utils.cpp
include/: decompress.h  openalex_json.h  ui.h  utils.h
src/: decompress.cpp  lib.rs  openalex_json.cpp  utils.cpp
src/Authors/: Authors.rs
src/Graph/: Graph.rs
src/Papers/: Papers.rs
src/Stats/: Stats.rs
