[package]
name = "openalex-collaboration-crawler"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "authors"
path = "src/Authors/Authors.rs"

[[bin]]
name = "papers"
path = "src/Papers/Papers.rs"


[[bin]]
name = "stats"
path = "src/Stats/Stats.rs"

[[bin]]
name = "graph"
path = "src/Graph/Graph.rs"


[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
flate2 = "1.0.35"
indicatif = "0.17.9"
serde = "1.0.217"
serde_json = "1.0.134"
unordered-pair = "0.2.5"
walkdir = "2.5.0"
